--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,2 +1,2 @@
-@import "bootstrap";
-@import "simple_form-bootstrap/simple_form-bootstrap";
+//@import "bootstrap";
+//@import "simple_form-bootstrap/simple_form-bootstrap";
