--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -18,7 +18,7 @@
 
       <% end %>
       <p></p>
-      <%= render "devise/shared/links" %>
+      <%= render "users/shared/links" %>
     </div>
   </div>
 </div>
