--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -14,7 +14,7 @@
 
         <%= f.input :password_confirmation %>
 
-        <%= f.button :submit, class: "btn-primary" %>
+        <%= f.button :submit, t('buttons.sign_up'), class: "btn-primary" %>
 
       <% end %>
       <p></p>
