--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,7 +6,7 @@
 
         <%= f.error_notification %>
 
-        <%= f.input :name, required: false %>
+        <%= f.input :name %>
 
         <%= f.input :email  %>
 
