--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,41 +1,30 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-5">
+      <h3>Смена пароля</h3>
+      <%= simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+        <%= f.error_notification %>
+
+        <%= f.input :email  %>
+
+        <%= f.input :password %>
+
+        <%= f.input :password_confirmation %>
+
+        <%= f.input :current_password %>
+
+        <%= f.button :submit, t('buttons.update'), class: "btn-primary" %>
+
+        <h3>Удалить аккаунт?</h3>
+
+        <div>
+          <%= link_to t('buttons.delete'), registration_path(resource_name),
+                      method: :delete, data: { confirm: t('confirmation.are_you_sure') }, class: 'btn btn-danger' %>
+          <%= link_to t('buttons.back'), :back %>
+        </div>
+
+      <% end %>
+    </div>
   </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
