--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -7,6 +7,6 @@
   <%= f.input :email  %>
 
   <%= f.button :submit, t('buttons.save'), class: "btn-primary" %>
-  или <%= link_to 'вернуться', :back %>
+  или <%= link_to t('buttons.back'), :back %>
 
 <% end %>
