--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -21,7 +21,7 @@
         <div>
           <%= link_to t('buttons.delete'), registration_path(resource_name),
                       method: :delete, data: { confirm: t('confirmation.are_you_sure') }, class: 'btn btn-danger' %>
-          <%= link_to t('buttons.back'), :back %>
+          или <%= link_to t('buttons.back'), :back %>
         </div>
 
       <% end %>
