--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
   <div class="event-info row">
     <div class="col-md-12">
       <%= content_tag 'div', '', class: 'event-background',
-                      style: "background-image: url(#{asset_path('event.jpg')})" %>
+                      style: "background-image: url(#{asset_pack_path('media/images/event.jpg')})" %>
 
       <div class="event-info-inner row">
         <div class="col-md-6">
