--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,13 +1,13 @@
 <div class="col-sm-6 col-md-4">
-  <div class="thumbnail">
+  <div class="thumbnail mb-4">
 
     <%= content_tag 'div', '', class: 'event-background',
                     style: "background-image: url(#{asset_pack_path('media/images/event_thumb.jpg')})" %>
 
     <div class="thumbnail-inner event-info-inner">
-      <div class="caption">
+      <div class="caption m-2">
         <div class="event-description">
-          <h3><%= link_to event.title, event_path(event) %></h3>
+          <h3><%= link_to event.title, event_path(event), class: 'btn btn-outline-success' %></h3>
           <h3><small><%= l event.datetime, format: :short %></small></h3>
           <div class="buffer-both"><%= event.address %></div>
         </div>
