--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,10 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+
     <%= stylesheet_pack_tag "application", :media => "all" %>
+
+    <%= javascript_pack_tag "application" %>
 
     <!-- For third-generation iPad with high-resolution Retina display: -->
     <!-- Size should be 144 x 144 pixels -->
@@ -30,53 +33,74 @@
     <!-- Size should be 32 x 32 pixels -->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
 
-    <%= javascript_pack_tag "application" %>
-
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
     <![endif]-->
   </head>
   <body>
-
-    <div class="navbar navbar-default navbar-static-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-
+  <div class="container">
+    <div class="navbar navbar-expand-lg navbar-light bg-light shadow">
+      <div class="container-fluid">
         <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
 
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <ul class="nav navbar-nav">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <% if user_signed_in? %>
-              <li><%= link_to 'Профиль', current_user %></li>
-              <li><%= link_to 'Выйти', destroy_user_session_path, method: :delete %></li>
+              <li class="nav-item">
+                <%= link_to current_user.name, current_user, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Выйти', destroy_user_session_path, :method => :delete, class: 'nav-link' %>
+              </li>
             <% else %>
-              <li><%= link_to 'Войти',new_user_session_path %></li>
-              <li><%= link_to 'Зарегистрироваться', new_user_registration_path %></li>
+              <li class="nav-item">
+                <%= link_to 'Войти', new_user_session_path, class: 'nav-link' %>
+              </li>
+              <li class="nav-item">
+                <%= link_to 'Зарегистрироваться', new_user_registration_path, class: 'nav-link' %>
+              </li>
             <% end %>
           </ul>
         </div>
       </div>
     </div>
+    <p></p>
 
-    <div class="container">
+    <div class="container mt-6">
+
+      <% if flash.any? %>
+        <% flash.each do |name, message| %>
+          <div class="alert alert-dismissible alert-danger fade show" role="alert">
+            <%= message %>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        <% end %>
+      <% end %>
+
       <div class="row">
-        <div class="col-lg-9">
-
+        <div class="col-lg-12">
           <%= yield %>
         </div>
-        <div class="col-lg-3">
-        </div><!--/span-->
-      </div><!--/row-->
+      </div>
       <p></p>
       <footer>
         <p>&copy; <%= t('app.company') %> </p>
       </footer>
 
-    </div> <!-- /container -->
-
+    </div>
+  </div>
   </body>
 </html>
+
+
+
+
+
+
+
+
+
