--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -6,22 +6,31 @@
 
         <%= f.error_notification %>
 
-        <%= f.input :email  %>
+        <div class="mb-3">
+          <%= f.input :email  %>
+        </div>
 
-        <%= f.input :password %>
+        <div class="mb-3">
+          <%= f.input :password %>
+        </div>
 
-        <%= f.input :password_confirmation %>
+        <div class="mb-3">
+          <%= f.input :password_confirmation %>
+        </div>
 
-        <%= f.input :current_password %>
-
-        <%= f.button :submit, t('buttons.update'), class: "btn-primary" %>
+        <div class="mb-3">
+          <%= f.input :current_password %>
+        </div>
+        <div class="mb-3">
+          <%= f.button :submit, t('buttons.update'), class: "btn-primary" %>
+        </div>
 
         <h3>Удалить аккаунт?</h3>
 
-        <div>
+        <div class="mb-3">
           <%= link_to t('buttons.delete'), registration_path(resource_name),
                       method: :delete, data: { confirm: t('confirmation.are_you_sure') }, class: 'btn btn-danger' %>
-          или <%= link_to t('buttons.back'), :back %>
+          или <%= link_to t('buttons.back'), :back, class: 'btn btn-secondary btn-sm' %>
         </div>
 
       <% end %>
