--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,24 +1,34 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-5">
+    <div class="row">
       <h3>Регистрация</h3>
-      <%= simple_form_for @user, url: registration_path(resource_name) do |f| %>
+      <div class="col-md-5">
+        <%= simple_form_for @user, url: registration_path(resource_name) do |f| %>
 
-        <%= f.error_notification %>
+          <%= f.error_notification %>
 
-        <%= f.input :name %>
+          <div class="mb-3">
+            <%= f.input :name %>
+          </div>
 
-        <%= f.input :email  %>
+          <div class="mb-3">
+            <%= f.input :email  %>
+          </div>
 
-        <%= f.input :password %>
+          <div class="mb-3">
+            <%= f.input :password %>
+          </div>
 
-        <%= f.input :password_confirmation %>
+          <div class="mb-3">
+            <%= f.input :password_confirmation %>
+          </div>
 
-        <%= f.button :submit, t('buttons.sign_up'), class: "btn-primary" %>
+          <%= f.button :submit, t('buttons.sign_up'), class: "btn-primary" %>
 
-      <% end %>
+        <% end %>
       <p></p>
-      <%= render "users/shared/links" %>
+      <div class="mb-3">
+        <%= render "users/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
