--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -19,6 +19,6 @@
   </div>
 
   <%= f.button :submit, t('buttons.save'), class: "btn-primary" %>
-  или <%= link_to 'вернуться', :back %>
+  или <%= link_to t('buttons.back'), :back %>
 
 <% end %>
