--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,10 +1,9 @@
-<h1>События</h1>
+<h1><%= t('titles.events')%></h1>
 
 <div class="buffer-both">
-  <%= link_to 'Создать событие', new_event_path, class: 'btn btn-success' %>
+  <%= link_to t('buttons.create'), new_event_path, class: 'btn btn-success' %>
 </div>
 
 <div class="row buffer-bottom shadow">
   <%= render partial: 'events/event', collection: @events %>
 </div>
-
