--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-
     <%= stylesheet_pack_tag "application", :media => "all" %>
 
     <%= javascript_pack_tag "application" %>
@@ -38,69 +37,63 @@
     <![endif]-->
   </head>
   <body>
-  <div class="container">
-    <div class="navbar navbar-expand-lg navbar-light bg-light shadow">
-      <div class="container-fluid">
-        <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
+    <div class="container">
+      <div class="navbar navbar-expand-lg navbar-light bg-light shadow">
+        <div class="container-fluid">
+          <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
 
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <% if user_signed_in? %>
-              <li class="nav-item">
-                <%= link_to current_user.name, current_user, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Выйти', destroy_user_session_path, :method => :delete, class: 'nav-link' %>
-              </li>
-            <% else %>
-              <li class="nav-item">
-                <%= link_to 'Войти', new_user_session_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Зарегистрироваться', new_user_registration_path, class: 'nav-link' %>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <p></p>
-
-    <div class="container mt-6">
-
-      <% if flash.any? %>
-        <% flash.each do |name, message| %>
-          <div class="alert alert-dismissible alert-danger fade show" role="alert">
-            <%= message %>
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  <%= link_to current_user.name, current_user, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to t('links.exit'), destroy_user_session_path, :method => :delete, class: 'nav-link' %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to t('links.sign_in'), new_user_session_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to t('links.sign_up'), new_user_registration_path, class: 'nav-link' %>
+                </li>
+              <% end %>
+            </ul>
           </div>
-        <% end %>
-      <% end %>
-
-      <div class="row">
-        <div class="col-lg-12">
-          <%= yield %>
         </div>
       </div>
       <p></p>
-      <footer>
-        <p>&copy; <%= t('app.company') %> </p>
-      </footer>
 
+      <div class="container mt-6">
+        <% if flash.notice %>
+            <div class="alert alert-dismissible alert-success fade show" role="alert">
+              <%= flash.notice %>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        <% elsif flash.alert %>
+            <div class="alert alert-dismissible alert-danger fade show" role="alert">
+              <%= flash.alert %>
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        <% end %>
+
+        <div class="row">
+          <div class="col-lg-12">
+            <%= yield %>
+          </div>
+        </div>
+
+        <p></p>
+        <footer>
+          <p>&copy; <%= t('app.company') %> </p>
+        </footer>
+      </div>
     </div>
-  </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
