--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,8 +9,8 @@
     <%= f.input :email  %>
   </div>
   <div class="actions">
-    <%= f.button :submit, t('buttons.save'), class: "btn-primary" %>
-    или <%= link_to t('buttons.back'), :back %>
+    <%= f.button :submit, t('buttons.save'), class: 'btn-primary' %>
+    или <%= link_to t('buttons.back'), :back, class: 'btn btn-secondary btn-sm' %>
   </div>
 
 <% end %>
