--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-5">
-      <h3>Смена пароля</h3>
+      <h3><%= t('titles.change_password')%></h3>
       <%= simple_form_for resource, as: resource_name, url: registration_path(resource_name) do |f| %>
 
         <%= f.error_notification %>
