--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-      <h3>Регистрация</h3>
+      <h3><%= t('titles.registration')%></h3>
       <div class="col-md-5">
         <%= simple_form_for @user, url: registration_path(resource_name) do |f| %>
 
