add comments & subscriptions

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -4,6 +4,6 @@
   <%= link_to t('buttons.create'), new_event_path, class: 'btn btn-success' %>
 </div>
 
-<div class="row buffer-bottom shadow">
-  <%= render partial: 'events/event', collection: @events %>
+<div class="row align-items-md-stretch shadow">
+    <%= render partial: 'events/event', collection: @events %>
 </div>
