--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,15 +11,13 @@
   <div class="row">
     <div class="col-md-12">
       <% if @user.events.any? %>
-        <h3>Организовал:</h3>
+        <h3><%= t('titles.create')%></h3>
         <div class="row">
           <%= render partial: 'events/event', collection: @user.events %>
         </div>
       <% else %>
-        <p class="buffer-top">Пользователь пока не организовал ни одного
-          события</p>
+        <p class="buffer-top"><%= t('titles.created')%></p>
       <% end %>
     </div>
   </div>
 </div>
-
