--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -30,7 +30,8 @@
         <div class="mb-3">
           <%= link_to t('buttons.delete'), registration_path(resource_name),
                       method: :delete, data: { confirm: t('confirmation.are_you_sure') }, class: 'btn btn-danger' %>
-          или <%= link_to t('buttons.back'), :back, class: 'btn btn-secondary btn-sm' %>
+          <%= t('text.or') %>
+          <%= link_to t('buttons.back'), :back, class: 'btn btn-secondary btn-sm' %>
         </div>
 
       <% end %>
