--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -56,14 +56,16 @@
           </p>
         </div>
       </div>
-      <div class="event-subscription-form shadow-sm">
-        <h4><%= t('subscriptions.i_will_go')%></h4>
-        <div>
-          <%= render partial: 'subscriptions/form', locals: {
-            subscription: @new_subscription || @event.subscriptions.build
-          } %>
+      <% unless current_user_can_edit?(@event) %>
+        <div class="event-subscription-form shadow-sm" >
+          <h4><%= t('subscriptions.i_will_go') %></h4>
+          <div>
+            <%= render partial: 'subscriptions/form', locals: {
+              subscription: @new_subscription || @event.subscriptions.build
+            } %>
+          </div>
         </div>
-      </div>
+      <% end %>
     </div>
   </div>
 </div>
