--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="mb-3">
-    <%= f.input :datetime, as: :date, html5: true %>
+    <%= f.input :datetime, as: :datetime %>
   </div>
 
   <div class="mb-3">
