--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -56,7 +56,7 @@
           </p>
         </div>
       </div>
-      <% unless event_belong?(@event) %>
+      <% unless can_subscribe?(@event) %>
         <div class="event-subscription-form shadow-sm" >
           <h4><%= t('subscriptions.i_will_go') %></h4>
           <div>
