--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -11,7 +11,7 @@
   </div>
 
   <div class="mb-3">
-    <%= f.input :datetime, as: :datetime %>
+    <%= f.input :datetime, as: :string, input_html: { class: 'my_class' } %>
   </div>
 
   <div class="mb-3">
