--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -5,9 +5,24 @@
   <div class="mb-3">
     <%= f.input :name, required: false %>
   </div>
+
   <div class="mb-3">
     <%= f.input :email  %>
   </div>
+
+  <div class="form-group">
+    <h4><%= t('titles.avatar')%></h4>
+    <div class="row">
+      <div class="col-sm-4">
+        <p><%= image_tag(@user.avatar.thumb.url) if @user.avatar? %></p>
+      </div>
+      <div class="row-sm-4">
+        <p><%= f.file_field :avatar, as: :file %></p>
+      </div>
+    </div>
+  </div>
+
+
   <div class="actions">
     <%= f.button :submit, t('buttons.save'), class: 'btn-primary' %>
     <%= t('text.or') %>
