--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -11,6 +11,6 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, t('buttons.upload'), class: 'btn-primary' %>
+    <%= f.button :submit, t('buttons.upload'), class: 'btn btn-info' %>
   </div>
 <% end %>
