--- a/app/frontend/styles/application.scss
+++ b/app/frontend/styles/application.scss
@@ -6,5 +6,6 @@
   =require twitter-bootstrap-static/sprites
   */
 @import "custom";
+@import "lightbox";
 @import "~bootstrap/scss/bootstrap";
 @import "air-datepicker/air-datepicker.css";
