--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,10 @@
 <div class="text-center">
   <h1><%= @user.name %></h1>
 
-  <div class="col-md-12">
-    <%= image_tag user_avatar(@user) %>
+  <div class="row">
+    <div class="col-md-12">
+      <%= image_tag user_avatar(@user)%>
+    </div>
   </div>
 
   <% if @user == current_user %>
