--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
 
   <div class="row">
     <div class="col-md-12">
-      <%= image_tag user_avatar(@user)%>
+      <div class="card-img">
+        <%= image_tag user_avatar(@user)%>
+      </div>
     </div>
   </div>
 
