--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,13 +32,14 @@
   <div class="row">
     <div class="col-md-8">
       <div class="event-photos">
-        <div class="event-photos-gallery">
-          <%= render partial: 'photos/photo', collection: @event.photos.except(@new_photo) %>
-        </div>
-        <h5><%= t('titles.photo') %></h5>
-        <div class="event-photo-form">
-          <%= render partial: 'photos/form', locals: {photo: @new_photo || @event.photos.build} %>
-        </div>
+        <h5><%= t('titles.photos') %></h5>
+          <div class="event-photos-gallery">
+            <%= render partial: 'photos/photo', collection: @event.photos.except(@new_photo) %>
+          </div>
+
+          <div class="event-photo-form">
+            <%= render partial: 'photos/form', locals: {photo: @new_photo || @event.photos.build} %>
+          </div>
       </div>
 
       <div class="event-comments buffer-top">
