--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <%= csp_meta_tag %>
     <link rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=<%= ENV['YANDEX_API_KEY'] %>&lang=ru_RU" type="text/javascript"></script>
 
     <%= stylesheet_pack_tag "application", media: "all" %>
 
