--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -31,24 +31,24 @@
   </div>
 
   <!-- Навигация -->
-  <ul class="nav nav-tabs" id="myTab" role="tablist">
+  <ul class="nav nav-pills nav-fill flex-column flex-sm-row" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="comments-tab" data-bs-toggle="tab" data-bs-target="#tab-comments" type="button" role="tab" aria-selected="true">
+      <button class="flex-sm-fill text-sm-center nav-link active" id="comments-tab" data-bs-toggle="tab" data-bs-target="#tab-comments" type="button" role="tab" aria-selected="true">
         <%= t('titles.discussion')%>
       </button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="photo-tab" data-bs-toggle="tab" data-bs-target="#tab-photos" type="button" role="tab" aria-selected="false">
+      <button class="flex-sm-fill text-sm-center nav-link" id="photo-tab" data-bs-toggle="tab" data-bs-target="#tab-photos" type="button" role="tab" aria-selected="false">
         <%= t('titles.photos')%>
       </button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="subscriptions-tab" data-bs-toggle="tab" data-bs-target="#tab-subscriptions" type="button" role="tab" aria-selected="false">
+      <button class="flex-sm-fill text-sm-center nav-link" id="subscriptions-tab" data-bs-toggle="tab" data-bs-target="#tab-subscriptions" type="button" role="tab" aria-selected="false">
         <%= t('titles.participants')%>
       </button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="map-tab" data-bs-toggle="tab" data-bs-target="#tab-map" type="button" role="tab" aria-selected="false">
+      <button class="flex-sm-fill text-sm-center nav-link" id="map-tab" data-bs-toggle="tab" data-bs-target="#tab-map" type="button" role="tab" aria-selected="false">
         <%= t('titles.location')%>
       </button>
     </li>
