--- a/app/frontend/styles/application.scss
+++ b/app/frontend/styles/application.scss
@@ -9,3 +9,5 @@
 @import "lightbox";
 @import "~bootstrap/scss/bootstrap";
 @import "air-datepicker/air-datepicker.css";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.core";
+@import "node_modules/@glidejs/glide/src/assets/sass/glide.theme";
