--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,17 +1,19 @@
-<%= title = t('titles.photo_add') %> <%= render partial: 'users/user', object: photo.user %>
-<div class="event-photo buffer-both">
-  <span class="event-photo">
-    <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: {
-      lightbox: 'lightbox', title: "#{ title } #{render partial: 'users/user', object: photo.user}",
-    } if photo.photo.url %>
-  </span>
+<% title = "#{t('titles.photo_add')} #{render partial: 'users/user', object: photo.user}" %>
 
-  <% if current_user_can_edit?(photo) %>
-    <%= link_to(
-          fa_icon('times'),
-          event_photo_path(photo.event, photo),
-          method: :delete,
-          data: {confirm: t('.delete_photo?')}
-        ) %>
-  <% end %>
-</div>
+<% if current_user_can_edit?(photo) %>
+  <% delete_icon = link_to(
+    fa_icon('times'),
+    event_photo_path(photo.event, photo),
+    method: :delete,
+    data: {confirm: t('.delete_photo?')}
+  ) %>
+  <% title << delete_icon %>
+<% end %>
+
+<li class="glide__slide">
+  <div class="event-photo mb-2">
+    <%= link_to image_tag(photo.photo.url), photo.photo.url, data: {
+      lightbox: 'lightbox', title: title,
+    } if photo.photo.url %>
+  </div>
+</li>
