--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -12,6 +12,6 @@
   <% end %>
   <p></p>
   <div class="actions">
-    <%= f.button :submit, t('buttons.send'), class: 'btn btn-primary' %>
+    <%= f.button :submit, t('buttons.send'), class: 'btn btn-primary', remote: true %>
   </div>
 <% end %>
