--- a/app/views/photos/_count.html.erb
+++ b/app/views/photos/_count.html.erb
@@ -1,1 +1,1 @@
-<button class="glide__bullet" data-glide-dir="=<%= @event.photos %>"></button>
+<button class="glide__bullet" data-glide-dir="=<%= @event.photos.size %>"></button>
