--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -12,7 +12,7 @@
 
 <li class="glide__slide">
   <div class="event-photo mb-2">
-    <%= link_to image_tag(photo.photo.url), photo.photo.url, data: {
+    <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: {
       lightbox: 'lightbox', title: title,
     } if photo.photo.url %>
   </div>
