--- a/app/frontend/styles/_custom.scss
+++ b/app/frontend/styles/_custom.scss
@@ -120,4 +120,7 @@ img {
     object-fit: cover;
     width: 100%;
     height: 300px;
+    border-radius: 10px;
+    border: 1px solid black;
+    box-shadow: 0 0 7px #666;
 }
