--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,7 +32,7 @@
   <!-- Навигация -->
   <ul class="nav nav-pills nav-fill flex-column flex-sm-row" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="flex-sm-fill text-sm-center nav-link" id="comments-tab" data-bs-toggle="tab" data-bs-target="#tab-comments" type="button" role="tab" aria-selected="true">
+      <button class="flex-sm-fill text-sm-center nav-link" id="comments-tab" data-bs-target="#tab-comments" type="button" role="tab" aria-selected="true">
         <%= t('titles.discussion')%>
       </button>
     </li>
@@ -92,7 +92,7 @@
       <% end %>
     </div>
 
-    <div class="tab-pane show active" role="tabpanel" id="tab-photos">
+    <div class="tab-pane fade show active" role="tabpanel" id="tab-photos">
       <div class="event-photos buffer-top">
         <div class="glide">
           <div class="glide__track" data-glide-el="track">
