--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -32,7 +32,7 @@
   <!-- Навигация -->
   <ul class="nav nav-pills nav-fill flex-column flex-sm-row" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="flex-sm-fill text-sm-center nav-link" id="comments-tab" data-bs-target="#tab-comments" type="button" role="tab" aria-selected="true">
+      <button class="flex-sm-fill text-sm-center nav-link" id="comments-tab" data-bs-toggle="tab" data-bs-target="#tab-comments" type="button" role="tab" aria-selected="true">
         <%= t('titles.discussion')%>
       </button>
     </li>
