--- a/app/views/event_mailer/subscription.html.erb
+++ b/app/views/event_mailer/subscription.html.erb
@@ -4,8 +4,7 @@
 <hr/>
 
 <%= t '.event' %>
-
-<h3><%= @event.title %></h3>
+<%= content_tag(:h3, content_tag(:a, @event.title, href: event_url(@event))) %>
 
 <%= t '.author' %>
 <h4><%= l @event.datetime %></h4>
